updated plausible to track outgoing links

--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,7 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
-		<script defer data-domain="radixlist.com" src="https://plausible.io/js/plausible.js"></script>
-		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+		<script defer data-domain="radixlist.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
